# Kimchi

./: .editorconfig  3709fe53-683b-4c47-a343-8979a09d6bc5.json  Cargo.toml  LICENSE-APACHE  README.md  TROUBLESHOOTING.md  kimchi.example.toml
.github/workflows/: deploys.yaml  lint.yaml  release.yaml  release.yml  tests.yaml
ci/: test.bash
fixtures/: TEST.html  TEST.md  TEST_404.md  TEST_ALL_PRIVATE.md  TEST_GITHUB.md  TEST_GITHUB_404.md  TEST_HTML5.html  TEST_HTML5_CUSTOM_ELEMENTS.html  TEST_HTML5_LOWERCASE_DOCTYPE.html  TEST_HTML5_MALFORMED_LINKS.html  TEST_HTML5_MINIFIED.html
src/: checker.rs  client.rs  client_pool.rs  collector.rs  extract.rs  lib.rs  main.rs  options.rs  stats.rs  test_utils.rs  types.rs  uri.rs
tests/: cli.rs  readme.rs  usage.rs
