[package]
name = "kimchi"
version = "0.4.0"
authors = ["Warren Galyen <wgalyen@bellhelmets.com>"]
edition = "2018"
description = "A spicy link checker"
homepage = "https://github.com/wgalyen/kimchi"
keywords = [
    "link",
    "checker",
    "cli",
    "link-checker",
    "validator",
]
repository = "https://github.com/wgalyen/kimchi"
documentation = ""
license = "Apache-2.0/MIT"

[dependencies]
anyhow = "1.0.38"
futures = "0.3"
glob = "0.3"
http = "0.2"
hubcaps = "0.6.2"
linkify = "0.4.0"
regex = "1.4.3"
url = "2.2.0"
check-if-email-exists = "0.8.19"
indicatif = "0.15.0"
structopt = "0.3"
toml = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
pulldown-cmark = "0.8.0"
quick-xml = "0.20.0"
headers = "0.3.2"
derive_builder = "0.9.0"
deadpool = "0.6.0"
shellexpand = "2.0"
lazy_static = "1.1"
wiremock = "0.3.0"
openssl-sys = "0.9.58" 

[dependencies.reqwest]
features = ["gzip"]
version = "0.10"

[dependencies.tokio]
features = ["full"]
version = "0.2"

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0"
uuid = { version = "0.8", features = ["v4"] }
tempfile = "3.1"

[features]
vendored-openssl = ["openssl-sys/vendored"] 