[package]
name = "kimchi"
version = "0.5.1"
authors = ["Warren Galyen <wgalyen@bellhelmets.com>"]
edition = "2018"
description = "A spicy link checker"
homepage = "https://github.com/wgalyen/kimchi"
keywords = [
    "link",
    "checker",
    "cli",
    "link-checker",
    "validator",
]
repository = "https://github.com/wgalyen/kimchi"
documentation = ""
license = "Apache-2.0/MIT"

[dependencies]
anyhow = "1.0.38"
futures = "0.3.12"
glob = "0.3.0"
http = "0.2.3"
hubcaps = "0.6.2"
linkify = "0.4.0"
regex = "1.4.3"
url = "2.2.0"
check-if-email-exists = "0.8.19"
indicatif = "0.15.0"
structopt = "0.3.21"
toml = "0.5.8"
serde = { version = "1.0.123", features = ["derive"] }
pulldown-cmark = "0.8.0"
html5ever = "0.25.1"
markup5ever = "0.10.0"
markup5ever_rcdom = "0.1.0"
headers = "0.3.3"
derive_builder = "0.9.0"
deadpool = "0.7.0"
shellexpand = "2.1.0"
lazy_static = "1.4.0"
wiremock = "0.4.9"
openssl-sys = "0.9.60"
serde_json = "1.0.62"


[dependencies.reqwest]
features = ["gzip"]
version = "0.11.0"

[dependencies.tokio]
features = ["full"]
version = "1.2.0"

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.7"
uuid = { version = "0.8.2", features = ["v4"] }
tempfile = "3.2.0"

[features]
vendored-openssl = ["openssl-sys/vendored"]
